# sanctra-asr-gpu

./: .gitignore  Dockerfile.gpu  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yaml
.sanctra/: ATTRIBUTIONS.md
server/: main.py  transcribe.py  vad.py
